<PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
            app:title="@string/company">

        <com.cursoandroid.ifood.activity.ui.CircleImageViewPreference
            app:key="image_preference"
            app:layout="@layout/circle_image_view"/>
        <EditTextPreference
                app:key="nome_empresa"
                app:defaultValue="@null"
                app:title="@string/name"
                app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
                app:key="categoria"
                app:defaultValue="@null"
                app:title="@string/category"
                app:useSimpleSummaryProvider="true"/>
        <EditTextPreference
                app:key="tempo_entrega"
                app:defaultValue="@null"
                app:title="@string/delivery_time"
                app:useSimpleSummaryProvider="true"/>
        <EditTextPreference
                app:key="taxa_entrega"
                app:defaultValue="@null"
                app:title="@string/delivery_tax"
                app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

</PreferenceScreen>