<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.AddProductActivity" android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
            style="@style/OutlinedBoxCustomError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayoutName"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp" app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/name" android:id="@+id/et_product_nome"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            style="@style/OutlinedBoxCustomError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout4"
            app:errorEnabled="true"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColorHint="@color/black"
                android:hint="@string/description" android:id="@+id/etProductDescription"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            style="@style/OutlinedBoxCustomError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout5"
            app:errorEnabled="true"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textColorHint="@color/black"
                android:hint="@string/price"
                android:id="@+id/etProductPrice"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:text="@string/register"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/btnRegister"
            android:backgroundTint="@color/colorAccent"
            style="@style/botaoPadrao"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
</LinearLayout>