<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.AutenticacaoActivity" android:layout_gravity="center"
        android:id="@+id/ConstraintLayout">
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayoutName"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout4"
            app:layout_constraintVertical_chainStyle="packed" app:layout_constraintVertical_bias="0.8"
            android:visibility="gone" tools:visibility="visible" app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/name" android:id="@+id/etAutenticacaoNome"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout4" app:layout_constraintStart_toStartOf="parent"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutName" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/textInputLayout5">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/black"
                android:hint="@string/e_mail" android:id="@+id/etAutenticacaoEmail"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout5"
            app:endIconMode="password_toggle" app:errorEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
            app:layout_constraintBottom_toTopOf="@+id/swAccess">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColorHint="@color/black"
                android:hint="@string/password"
                android:id="@+id/etAutenticacaoPassword"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
            android:text="@string/login"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            app:layout_constraintEnd_toStartOf="@+id/swAccess"
            app:layout_constraintTop_toTopOf="@+id/swAccess" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="9dp"
            app:layout_constraintBottom_toBottomOf="@+id/swAccess"/>
    <Switch
            android:layout_width="48dp"
            android:layout_height="48dp" android:id="@+id/swAccess"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textInputLayout5"
            android:layout_marginBottom="4dp" app:layout_constraintBottom_toTopOf="@+id/swType"
            android:minHeight="48dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/register"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            app:layout_constraintStart_toEndOf="@+id/swAccess"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@+id/swAccess"
            app:layout_constraintBottom_toBottomOf="@+id/swAccess"/>

    <TextView
            android:text="@string/user"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tvUser"
            app:layout_constraintEnd_toStartOf="@+id/swType"
            app:layout_constraintTop_toTopOf="@+id/swType" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="9dp"
            app:layout_constraintBottom_toBottomOf="@+id/swType" android:visibility="gone" tools:visibility="visible"/>
    <Switch
            android:layout_width="48dp"
            android:layout_height="48dp" android:id="@+id/swType"
            android:layout_marginTop="4dp" app:layout_constraintTop_toBottomOf="@+id/swAccess"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/btnAcesso"
            android:minHeight="48dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:visibility="gone" tools:visibility="visible"/>
    <TextView
            android:text="@string/company"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tvCompany"
            app:layout_constraintStart_toEndOf="@+id/swType"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@+id/swType"
            app:layout_constraintBottom_toBottomOf="@+id/swType" tools:visibility="visible" android:visibility="gone"/>

    <Button
            android:text="@string/access"
            android:enabled="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/btnAcesso"
            android:backgroundTint="@color/colorAccent"
            style="@style/botaoPadrao"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/swType" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.5"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBarAutenticacao"
            android:visibility="gone" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
    />
</androidx.constraintlayout.widget.ConstraintLayout>